Bug 427717 - KDEConnect crush on notification
Summary: KDEConnect crush on notification
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-10-14 19:34 UTC by Misha
Modified: 2020-10-19 15:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Misha 2020-10-14 19:34:22 UTC
Application: kdeconnectd (1.4.0)

Qt Version: 5.14.2
Frameworks Version: 5.73.0
Operating System: Linux 5.8.13-200.fc32.x86_64 x86_64
Windowing system: X11
Distribution: Fedora 32 (Thirty Two)

-- Information about the crash:
- What I was doing when the application crashed:
Crashed a few times when I am getting notification from phone (version 1.14.2, installed from Google Play) from Telegram
Telegram is opened on my phone and computer at the same time
Possibly it's because telegram removes notifications from phone when I open this message on computer


Fedora 32 LXDE

The crash can be reproduced sometimes.

-- Backtrace:
Application: KDE Connect Daemon (kdeconnectd), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ff1679df900 (LWP 37675))]

Thread 4 (Thread 0x7ff155970700 (LWP 37679)):
#0  0x00007ff166448bed in g_source_unref_internal () from /lib64/libglib-2.0.so.0
#1  0x00007ff16644a945 in g_source_iter_next () from /lib64/libglib-2.0.so.0
#2  0x00007ff16644bee3 in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#3  0x00007ff16644c9db in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#4  0x00007ff16644cbe3 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x00007ff167e78b8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#6  0x00007ff167e2b91b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#7  0x00007ff167c97427 in QThread::exec() () from /lib64/libQt5Core.so.5
#8  0x00007ff167c98690 in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#9  0x00007ff166db3432 in start_thread () from /lib64/libpthread.so.0
#10 0x00007ff167913913 in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7ff156171700 (LWP 37678)):
#0  0x00007ff167908aaf in poll () from /lib64/libc.so.6
#1  0x00007ff16644caae in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#2  0x00007ff16644cbe3 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007ff167e78b8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#4  0x00007ff167e2b91b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#5  0x00007ff167c97427 in QThread::exec() () from /lib64/libQt5Core.so.5
#6  0x00007ff16810b51b in QDBusConnectionManager::run() () from /lib64/libQt5DBus.so.5
#7  0x00007ff167c98690 in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#8  0x00007ff166db3432 in start_thread () from /lib64/libpthread.so.0
#9  0x00007ff167913913 in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7ff156991700 (LWP 37677)):
#0  0x00007ff167908aaf in poll () from /lib64/libc.so.6
#1  0x00007ff165eb738a in _xcb_conn_wait () from /lib64/libxcb.so.1
#2  0x00007ff165eb971a in xcb_wait_for_event () from /lib64/libxcb.so.1
#3  0x00007ff156bc6c78 in QXcbEventQueue::run() () from /lib64/libQt5XcbQpa.so.5
#4  0x00007ff167c98690 in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#5  0x00007ff166db3432 in start_thread () from /lib64/libpthread.so.0
#6  0x00007ff167913913 in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7ff1679df900 (LWP 37675)):
[KCrash Handler]
#4  0x00007ff167e63e81 in QVariant::QVariant(QString const&) () from /lib64/libQt5Core.so.5
#5  0x00007ff155038e6a in void NetworkPacket::set<QString>(QString const&, QString const&) () from /usr/lib64/qt5/plugins/kdeconnect/kdeconnect_notifications.so
#6  0x00007ff155037385 in NotificationsDbusInterface::sendAction(QString const&, QString const&) () from /usr/lib64/qt5/plugins/kdeconnect/kdeconnect_notifications.so
#7  0x00007ff167e5bf76 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#8  0x00007ff15503263e in Notification::actionTriggered(QString const&, QString const&) () from /usr/lib64/qt5/plugins/kdeconnect/kdeconnect_notifications.so
#9  0x00007ff167e5bf76 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#10 0x00007ff169023ef5 in KNotification::activated(unsigned int) () from /lib64/libKF5Notifications.so.5
#11 0x00007ff16902a3e4 in KNotificationManager::notificationActivated(int, int) () from /lib64/libKF5Notifications.so.5
#12 0x00007ff167e5bf76 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#13 0x00007ff169023fc3 in KNotificationPlugin::actionInvoked(int, int) () from /lib64/libKF5Notifications.so.5
#14 0x00007ff16903b4cc in NotifyByPopup::onNotificationActionInvoked(unsigned int, QString const&) () from /lib64/libKF5Notifications.so.5
#15 0x00007ff167e5bf76 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#16 0x00007ff169045c49 in OrgFreedesktopNotificationsInterface::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib64/libKF5Notifications.so.5
#17 0x00007ff169045d33 in OrgFreedesktopNotificationsInterface::qt_metacall(QMetaObject::Call, int, void**) () from /lib64/libKF5Notifications.so.5
#18 0x00007ff168115369 in QDBusConnectionPrivate::deliverCall(QObject*, int, QDBusMessage const&, QVector<int> const&, int) () from /lib64/libQt5DBus.so.5
#19 0x00007ff167e54b5e in QObject::event(QEvent*) () from /lib64/libQt5Core.so.5
#20 0x00007ff168864063 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#21 0x00007ff167e2cfc0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#22 0x00007ff167e2fc47 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQt5Core.so.5
#23 0x00007ff167e790a7 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5Core.so.5
#24 0x00007ff16644c78f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#25 0x00007ff16644cb18 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#26 0x00007ff16644cbe3 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#27 0x00007ff167e78b73 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#28 0x00007ff167e2b91b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#29 0x00007ff167e335a6 in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#30 0x000055b8c1f61e86 in main ()
[Inferior 1 (process 37675) detached]

Possible duplicates by query: bug 427560, bug 427551, bug 426110, bug 426090, bug 425835.

Reported using DrKonqi
Comment 1 Nicolas Fella 2020-10-15 00:42:18 UTC
Judging by the backtrace you clicked on the notification before it crashed. Do you remember if you clicked on a specific action or just the notification itself?

Also, what desktop are you using?

I have an idea what is going on, but I haven't tried to reproduce it yet
Comment 2 Misha 2020-10-15 08:47:31 UTC
(In reply to Nicolas Fella from comment #1)
> Judging by the backtrace you clicked on the notification before it crashed.
> Do you remember if you clicked on a specific action or just the notification
> itself?
> 
> Also, what desktop are you using?
> 
> I have an idea what is going on, but I haven't tried to reproduce it yet

Just clicked on the notification from Telegram
I'm using Fedora 32 with LXDE desktop
Comment 3 Nicolas Fella 2020-10-15 14:47:23 UTC
Thanks!

I was able to reproduce the problem in a Fedora LXDE VM and it seems to match my suspicion. There seems to be some difference in how the notifications are implemented in Plasma and LXDE which is why I haven't experienced the problem on Plasma. It should be easy to fix though
Comment 4 Bug Janitor Service 2020-10-15 15:50:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/333
Comment 5 Misha 2020-10-15 17:02:01 UTC
Thank you very much for fixing!
Comment 6 Bug Janitor Service 2020-10-15 20:12:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knotifications/-/merge_requests/13
Comment 7 Nicolas Fella 2020-10-19 15:24:25 UTC
Git commit c58ac88593e2e4d8cb7137d787fdbc0269dd7e36 by Nicolas Fella.
Committed on 15/10/2020 at 20:43.
Pushed by nicolasfella into branch 'master'.

Apply some sanity checking to action keys

In case the notification server sends invalid actions don't forward them to the application.

For example LXDE sends ActionInvoked for the default action even when no default action has been declared.

M  +9    -2    src/notifybypopup.cpp

https://invent.kde.org/frameworks/knotifications/commit/c58ac88593e2e4d8cb7137d787fdbc0269dd7e36